# duplication-detector

./: Cargo.toml  README.md
articles/: blog.md
benches/: criterion_benchmark.rs
blog/: README.md
blog/assets/figures/: Basic_Architecture.drawio
dd-cli/: Cargo.toml
dd-cli/src/: cli_backend.rs  main.rs
dd-lib/: Cargo.toml
docs/: README.md  README.qmd
docs/assets/figures/: Basic_Architecture.drawio
src/: cli_parser.rs  controller.rs  lib.rs  main.rs  preprocessor.rs  processor.rs
tests/: integration_test.rs
